...
    onDismissRequest: () -> Unit
) {
  CustomDialog(
      title = "${supply.quantity} ${supply.unit}",
      description = supply.description,
      onDismissRequest = onDismissRequest,
      modifier = Modifier.testTag("guest_supply_dialog"),
      buttonDataList =
          listOf(
              ButtonData(
                  stringResource(id = R.string.chimpagne_cancel),
                  onClick = onDismissRequest,
                  modifier = Modifier.testTag("guest_supply_cancel")),
...
                      assignMyself(false)
                      onDismissRequest()
                    }
              } else {
                ButtonData(
                    stringResource(id = R.string.supplies_assign_myself),
                    modifier = Modifier.testTag("guest_supply_assign")) {
                      assignMyself(true)
                      onDismissRequest()
                    }
              })) {
        Column(modifier = Modifier.fillMaxWidth()) {
          if (supply.assignedTo.keys.isEmpty()) {
...
