...
  var unit by remember { mutableStateOf(supply.unit) }

  CustomDialog(
      title = title,
      description = stringResource(id = R.string.supplies_dialog_description),
      onDismissRequest = onDismissRequest,
      modifier = Modifier.testTag("edit_supply_dialog"),
      buttonDataList =
          listOf(
              ButtonData(
                  stringResource(id = R.string.chimpagne_cancel), onClick = onDismissRequest),
              ButtonData(saveButton, modifier = Modifier.testTag("supplies_add_button")) {
                onSave(
                    supply.copy(
                        description = description,
                        quantity = quantity.toIntOrNull() ?: 0,
                        unit = unit))
                onDismissRequest()
...
