...
  }

  CustomDialog(
      title = "${tempSupply.quantity} ${tempSupply.unit}",
      description = tempSupply.description,
      onDismissRequest = onDismissRequest,
      modifier = Modifier.testTag("staff_supply_dialog"),
      buttonDataList =
          listOf(
              ButtonData(
                  stringResource(id = R.string.chimpagne_cancel),
                  onClick = onDismissRequest,
                  modifier = Modifier.testTag("cancel_supply_button")),
...
                  stringResource(id = R.string.chimpagne_edit),
                  modifier = Modifier.testTag("edit_supply_button")) {
                    displayEditSupplyDialog = true
                  },
              ButtonData(
                  stringResource(id = R.string.chimpagne_save),
                  modifier = Modifier.testTag("save_supply_button")) {
                    displayEditSupplyDialog = false
                    updateSupply(tempSupply)
                    onDismissRequest()
                  })) {
        LazyColumn(modifier = Modifier.fillMaxWidth()) {
          if (tempSupply.assignedTo.keys.isEmpty()) {
...
